--- a/views/formulario.handlebars
+++ b/views/formulario.handlebars
@@ -1,5 +1,5 @@
+<form action="card-form" method="POST">
 <h1>Cadastre-se em nossa Newsletter</h1>
-<form action="add-cadastrar" method="POST">
     Email: 
     <input type="email" name="email">
     <button>Cadastrar</button>
